--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: rgb(50, 50, 50);
     height: 100vh;
+    color: white;
 }
 
 main{
@@ -18,10 +19,6 @@ main{
 .my_button{
     position: absolute;
     top: 50%;
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
-    background-color: blue;
     border: none;
     outline: none;
 }
@@ -44,6 +41,7 @@ main{
 #img{
     width: 100%;
     height: 100%;
+    border-radius: 10px;
     object-fit: cover;
     object-position: center;
 }
@@ -60,6 +58,7 @@ main{
 }
 
 .my_text{
-    bottom: 4rem;
+    bottom: 2rem;
     left: 4rem;
+    width: 86%;
 }
